<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/main"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:text="@string/store"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/romance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/checked_item"
                android:checkable="true"
                android:text="@string/romance"
                android:textColor="@color/checked_chip"
                app:chipStrokeColor="#ff9933"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/romcom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/checked_item"
                android:checkable="true"
                android:text="@string/romcom"
                android:textColor="@color/checked_chip"
                app:chipStrokeColor="#ff9933"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/harem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/checked_item"
                android:checkable="true"
                android:text="@string/harem"
                android:textColor="@color/checked_chip"
                app:chipStrokeColor="#ff9933"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/checked_item"
                android:checkable="true"
                android:text="@string/action"
                android:textColor="@color/checked_chip"
                app:chipStrokeColor="#ff9933"
                app:chipStrokeWidth="1dp" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

</FrameLayout>