<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#97FBEEE1"
            android:minHeight="?attr/actionBarSize"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:theme="?attr/actionBarTheme"
            app:titleMargin="6dp">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/concern"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="10dp">

                <EditText
                    android:id="@+id/txtSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:focusable="auto"
                    android:hint="@string/search"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="2dp" />

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_launcher_foreground" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/popular"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/publish"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/recommend"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</FrameLayout>