<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginFrag">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:src="@drawable/avatar" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/customer"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:textAlignment="textStart">

            <Button
                android:id="@+id/favourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/white"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/like"
                android:textAlignment="textStart"
                android:textColor="@color/main"
                app:icon="@drawable/baseline_favorite_24"
                app:iconTint="@color/main"
                app:rippleColor="@color/secondMain" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textColor="@color/main"
                app:icon="@drawable/ic_baseline_exit_to_app_24"
                app:iconTint="@color/main"
                app:rippleColor="@color/secondMain" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>