<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmActivity">

    <ImageView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/filmName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="TextView"
        android:textColor="@color/main"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video" />

    <TextView
        android:id="@+id/publishDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/filmName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/filmName"
        app:layout_constraintTop_toBottomOf="@+id/filmName" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="TextView"
        android:textColor="@color/main"
        app:layout_constraintBottom_toBottomOf="@+id/publishDate"
        app:layout_constraintStart_toEndOf="@+id/publishDate"
        app:layout_constraintTop_toTopOf="@+id/publishDate" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:text="TextView"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/publishDate"
        app:layout_constraintStart_toStartOf="@+id/publishDate"
        app:layout_constraintTop_toBottomOf="@+id/publishDate" />

    <CheckBox
        android:id="@+id/like"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:button="@drawable/sl_favorite"
        android:buttonTint="@color/main"
        android:text="@string/empty"
        android:textColor="@color/main"
        app:layout_constraintBottom_toBottomOf="@+id/filmName"
        app:layout_constraintStart_toEndOf="@+id/filmName"
        app:layout_constraintTop_toTopOf="@+id/filmName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/history"
        android:textColor="@color/main"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/main"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episodeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/episode"
        app:layout_constraintTop_toBottomOf="@+id/episode" />


</androidx.constraintlayout.widget.ConstraintLayout>